[fix] データ前処理

--- a/a60min-blitz.ipynb
+++ b/a60min-blitz.ipynb
@@ -79,20 +79,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpu\n"
+      "<class 'torch.device'>\n"
      ]
     }
    ],
    "source": [
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(device)"
+    "print(type(device))"
    ]
   },
   {
@@ -449,20 +449,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "float"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
